# bmpraytracer

./: CMakeLists.txt  README.md  main.cpp  make_bmp.cpp
.github/workflows/: cpp.yml
src/: bmp.cpp  bmp.h  caster.cpp  caster.h  color.cpp  color.h  colors.cpp  colors.h  prims.cpp  prims.h  sphere.cpp  sphere.h  vec.cpp  vec.h
test/: test_bmp.cpp  test_caster.cpp  test_color.cpp  test_colors.cpp  test_vec.cpp
